<resources>
    <string name="app_name">ClientApp</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="student">Student</string>
    <string name="instructor">INSTRUCTOR</string>
    <string name="school">SCHOOL</string>
    <string name="panel">PANEL</string>
    <string name="ride_management">RIDE MANAGEMENT</string>
    <string name="user_management">USER MANAGEMENT</string>
    <string name="reservation">RESERVATION</string>
    <string name="ride_scheduler">RIDE SCHEDULER</string>
    <string name="workday">Workday</string>


    <string-array name="list_student_variable">
        <item>first name</item>
        <item>second name</item>
        <item>email</item>
        <item>phone number</item>
        <item>school id</item>
        <item>start data</item>
        <item>end data</item>
    </string-array>
    <string name="title_activity_tem_main_panel_fragmeny">temMainPanelFragmeny</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>