<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="100dp"
    android:id="@+id/linearLayout"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/panel"
            android:textColor="#5478E6"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/user_management"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/manageStudent"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/student" />

        <Button
            android:id="@+id/manageInstructor"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/instructor" />

        <Button
            android:id="@+id/manageSchool"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/school" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ride_management"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:weightSum="100">

        <Button
            android:id="@+id/manageReservation"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="33"
            android:background="@android:color/darker_gray"

            android:text="@string/reservation" />

        <Button
            android:id="@+id/manageRideScheduler"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@android:color/darker_gray"

            android:text="@string/ride_scheduler" />

        <Button
            android:id="@+id/manageWorkDay"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="33"
            android:background="@android:color/darker_gray"

            android:text="@string/workday" />

    </LinearLayout>

</LinearLayout>